--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing = "20">
     <tr>
-      <td><img src="Ovie img-modified (1).png" alt="Ovie Eharisi-Ayomah Profile Photo"></td>
+      <td><img src="Ovie img-modified-modified (1).png" alt="Ovie Eharisi-Ayomah Profile Photo"></td>
       <td><h1>Ovie Eharisi-Ayomah</h1>
       <p><em>Software test engineer at <strong><a href="https://careers.dwp.gov.uk/">DWP digital</a></strong></em></p>
       <p>I am a Biological science (BSc) graduate from the university of Leicester Currently based in Leicester and looking for a career in software engineering and in the process of developing an app.
